--- a/pom.xml
+++ b/pom.xml
@@ -127,4 +127,12 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>nexus-binfo</id>
+            <url>
+                http://192.168.1.241:8083/nexus/content/repositories/releases/
+            </url>
+        </repository>
+    </distributionManagement>
 </project>
