--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,37 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-<!-- source https://github.com/tianjing/tgtools.web.git -->
-    <groupId>tgtools</groupId>
+    <groupId>com.github.tianjing</groupId>
     <artifactId>tgtools.web</artifactId>
-    <version>1.0.326</version>
+    <version>1.0.327</version>
+
+    <name>${project.groupId}:${project.artifactId}</name>
+    <url>https://github.com/tianjing/tgtools.web</url>
+    <description>base tgtools.core web util</description>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <name>tianjing</name>
+            <email>tian___jing@hotmail.com</email>
+            <roles>
+                <role>developer</role>
+            </roles>
+            <timezone>+8</timezone>
+        </developer>
+    </developers>
+    <scm>
+        <connection>scm:git:https://github.com/tianjing/tgtools.web.git</connection>
+        <developerConnection>scm:git:https://github.com/tianjing/tgtools.web.git</developerConnection>
+        <url>https://github.com/tianjing/tgtools.web</url>
+        <tag>v${project.version}</tag>
+    </scm>
+
 
 
     <properties>
@@ -18,7 +45,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>tgtools</groupId>
+            <groupId>com.github.tianjing</groupId>
             <artifactId>tgtools.core</artifactId>
             <version>1.0.275</version>
         </dependency>
@@ -66,13 +93,6 @@
         </dependency>
 
     </dependencies>
-
-    <repositories>
-        <repository>
-            <id>tianjing-maven</id>
-            <url>https://gitee.com/tgtool/maven/raw/master</url>
-        </repository>
-    </repositories>
     <build>
         <plugins>
             <plugin>
@@ -125,14 +145,44 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--中心库-->
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.3</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+            <!--配置生成签名-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
         <repository>
-            <id>nexus-binfo</id>
-            <url>
-                http://10.0.0.7:8083/nexus/content/repositories/releases/
-            </url>
+            <id>ossrh</id>
+            <name>Maven Central Staging Repository</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
 </project>
